# NIM-Flutter-SDK

./: .gitignore
nim_core/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
nim_core/android/: build.gradle  settings.gradle
nim_core/example/: README.md  flutter_aos_test.sh  pubspec.yaml
nim_core/example/android/: .gitignore  build.gradle  gradle.properties
nim_core/example/integration_test/: main_test.dart
nim_core/example/ios/: Podfile
nim_core/example/lib/: main.dart
nim_core/example/test/: widget_test.dart
nim_core/example/web/: index.html  index.umd.js
nim_core/ios/: nim_core.podspec
nim_core/ios/Classes/: FLTConvert.swift  FLTService.swift  MethodCallHandlerImpl.swift  NimCore.swift  NimCorePlugin.h  NimCorePlugin.m  NimDataConvertProtrol.swift  NimResult.swift  ResultCallback.swift  SafeMethodChannel.swift  SafeResult.swift  SwiftNimCorePlugin.swift
nim_core/lib/: nim_core.dart
nim_core/test/: nim_core_test.dart
nim_core_macos/: CHANGELOG.md  README.md  pubspec.yaml
nim_core_macos/example/: desktop_flutter_test.sh  pubspec.yaml
nim_core_macos/example/integration_test/: main_test.dart
nim_core_macos/example/test/: widget_test.dart
nim_core_macos/macos/: nim_core_macos.podspec
nim_core_macos/macos/Classes/: NimCore.h  NimCore.mm  NimCoreMacosPlugin.swift  nim_core_macos_plugin.h  nim_core_macos_plugin.mm
nim_core_macos/scripts/: build.py  downloadSDK.dart  syncCommon.py
nim_core_platform_interface/: .packages  CHANGELOG.md  README.md  pubspec.yaml
nim_core_platform_interface/.dart_tool/: package_config.json  package_config_subset
nim_core_platform_interface/.dart_tool/build_resolvers/: sdk.sum.deps
nim_core_platform_interface/lib/: nim_core_platform_interface.dart
nim_core_v2/: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
nim_core_v2/android/: build.gradle  settings.gradle
nim_core_v2/doc/api/: __404error.html  index.html  index.json  search.html
nim_core_v2/example/: .gitignore  desktop_flutter_test.sh  flutter_aos_test.sh  pubspec.yaml
nim_core_v2/example/android/: build.gradle  gradle.properties  settings.gradle
nim_core_v2/example/deploy/: build.sh  build_ios.sh  pack_env.sh  upload-intergration-test-report.sh
nim_core_v2/example/ios/: Podfile
nim_core_v2/example/lib/: main.dart
nim_core_v2/example/test/: widget_test.dart
nim_core_v2/example/web/: index.html  index.umd.js
nim_core_v2/example/windows/: CMakeLists.txt
nim_core_v2/ios/: nim_core_v2.podspec
nim_core_v2/ios/Classes/: FLTConvert.swift  FLTService.swift  MethodCallHandlerImpl.swift  NimCore.swift  NimCorePlugin.m  NimDataConvertProtrol.swift  NimPathUtils.swift  NimStringUtils.swift  ResultCallback.swift  SafeMethodChannel.swift  SafeResult.swift
nim_core_v2/lib/: nim_core.dart
nim_core_v2/test/: nim_core_test.dart
nim_core_v2_macos/: CHANGELOG.md  README.md  pubspec.yaml
nim_core_v2_macos/example/: .gitignore  README.md  pubspec.yaml
nim_core_v2_macos/example/integration_test/: main_test.dart
nim_core_v2_macos/example/lib/: main.dart
nim_core_v2_macos/macos/: nim_core_v2_macos.podspec
nim_core_v2_macos/macos/Classes/: FLTConvert.cpp  FLTConvert.h  NimCore.h  NimCore.mm  NimCoreMacosPlugin.swift
nim_core_v2_macos/scripts/: build.py  downloadSDK.dart  syncCommon.py
nim_core_v2_platform_interface/: CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
nim_core_v2_platform_interface/lib/: nim_core_v2_platform_interface.dart
nim_core_v2_web/: .metadata  CHANGELOG.md  README.md  pubspec.yaml
nim_core_v2_web/lib/: nim_core_web.dart
nim_core_v2_web/web/: .eslintignore  .eslintrc.cjs  .prettierignore  README.md  package.json  rollup.config.js  tsconfig.json
nim_core_v2_web/web/src/: constants.ts  index.ts  logger.ts  types.ts  typings.d.ts  utils.ts
nim_core_v2_windows/: .gitignore  CHANGELOG.md  README.md  pubspec.yaml
nim_core_v2_windows/example/: pubspec.yaml
nim_core_v2_windows/example/integration_test/: main_test.dart
nim_core_v2_windows/example/windows/: CMakeLists.txt
nim_core_v2_windows/scripts/: downloadSDK.dart  syncCommon.py
nim_core_v2_windows/windows/: CMakeLists.txt  nim_core_plugin.h  nim_core_windows.cpp
nim_core_v2_windows/windows/src/: FLTConvert.cpp  FLTConvert.h  MethodCallHandlerImpl.h  NimCore.cpp  NimCore.h
nim_core_web/: CHANGELOG.md  README.md  pubspec.yaml
nim_core_web/lib/: nim_core_web.dart
nim_core_web/web/: package.json  tsconfig.json
nim_core_web/web/src/: format.ts  logger.ts  types.ts  utils.ts
nim_core_windows/: .clang-format  CHANGELOG.md  README.md  pubspec.yaml
nim_core_windows/example/: pubspec.yaml
nim_core_windows/example/integration_test/: main_test.dart
nim_core_windows/example/lib/: main.dart
nim_core_windows/scripts/: downloadSDK.dart  syncCommon.py
nim_core_windows/windows/: CMakeLists.txt  nim_core_plugin.cpp  nim_core_plugin.h  nim_core_windows.cpp
nim_core_windows/windows/include/nim_core_windows/: nim_core_windows.h
nim_core_windows/windows/src/: MethodCallHandlerImpl.cpp  MethodCallHandlerImpl.h  NimCore.cpp  NimCore.h
nim_core_windows/windows/src/common/: FLTConvert.cpp  FLTConvert.h  FLTService.cpp  FLTService.h  NimResult.cpp  stable.h
nim_core_windows/windows/src/common/services/: FLTAudioRecorderService.cpp  FLTAudioRecorderService.h  FLTAuthService.cpp  FLTAuthService.h  FLTChatRoomService.cpp  FLTChatRoomService.h  FLTEventSubscribeService.cpp  FLTInitializeService.cpp  FLTInitializeService.h  FLTMessageService.cpp  FLTNOSService.cpp  FLTNOSService.h  FLTPassThroughService.cpp  FLTPassThroughService.h  FLTSettingsService.cpp  FLTSettingsService.h  FLTSuperTeamService.cpp  FLTSuperTeamService.h  FLTSystemNotificationService.cpp  FLTTeamService.cpp  FLTTeamService.h  FLTUserService.cpp  FLTUserService.h
nim_core_windows/windows/src/common/utils/: singleton.h  stringHash.hpp
nim_core_windows/windows/src/utils/dump/: appDump.cpp  appDump.h  myStackWalker.cpp  myStackWalker.h  stackWalker.cpp  stackWalker.h
nim_core_windows/windows/test/: nim_core_windows_test.cpp
(+11910 files in other folders)
